my first commit

--- a/signin.html
+++ b/signin.html
@@ -26,6 +26,10 @@
                 <input type="email" id="email" name="email"><br>
             </div><br>
             <div>
+                <label for="password">PASSWORD</label><br>
+                <input type="password" id="password" name="password"><br>
+            </div>
+            <div>
                 <input type="submit" value="Submit">
             </div>
         </form>
