--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <div class="parent">
                  <h1><B>PROSE AND PARCHMENT BOOK CLUB</B></h1>
             <P>  Welcome to the chapter and verse of your eyes!!</P>
-            <DIV class="text-center">
+            <div class="text-center">
             <img src="logo.jpg"class="child"><br>"Prose and Parchment: Where Words Come to Life. Explore the boundless world of literature and creativity as we embark on a journey through the realms of words and imagination. Our webpage is your portal to captivating stories, thought-provoking essays, and the magic of prose. Join us in celebrating the art of writing, where each stroke of the pen or keystroke on the keyboard transforms mere parchment into a canvas for the soul. Dive into the rich tapestry of human expression and let your imagination run wild with us at Prose and Parchment."   <br> 
-            </DIV>   
+            </div>   
                 </div>
 
      </header>
@@ -30,6 +30,7 @@
     <nav>
         <a href="signup.html">Sign Up</a> 
           <a href="signin.html">Sign In</a>
+          <a href="bookings.html">Borrow Book</a>
        <ul>
         <li><a href="about.html">About Us</a></li>
         <li><a href="contacts.html">Our Contacts</a></li>
