my first commit

--- a/about.html
+++ b/about.html
@@ -12,16 +12,14 @@
 </head>
 <body>
     <main>
-        <h1>About</h1>
         <figure>
-            <img src="logo.jpg" width="320" >
-            <figcaption>
-                The prose and parchment official logo....
-            </figcaption>
+            <img src="logo.jpg" width="500" height="500">
+
         </figure>
-        <video width="320" height="240" controls muted>
+        <video width="500" height="500" controls loop muted>
             <source src="video.mp4" type="video/mp4">
         </video>
+       
         <p>
             "Prose and Parchment: Where Words Come to Life. Explore the boundless world of literature and creativity as we embark on a journey through the realms of words and imagination. Our webpage is your portal to captivating stories, thought-provoking essays, and the magic of prose. Join us in celebrating the art of writing, where each stroke of the pen or keystroke on the keyboard transforms mere parchment into a canvas for the soul. Dive into the rich tapestry of human expression and let your imagination run wild with us at Prose and Parchment
         </p>
